--- a/Final_TMT_phos_MSstats_analysis.Rmd
+++ b/Final_TMT_phos_MSstats_analysis.Rmd
@@ -30,7 +30,7 @@ library(vroom) # Fast data loading
 library(dplyr) # Data manipulation
 
 # Function to import the data given a data type key
-import_psm_data <- function(input_dir, file_list) {
+import_psm_data <- function(file_list) {
   # Filter files list to only include relevant files
   filtered_file_list <- grep(file_list, pattern = paste0("_PSMs.txt$"), value = TRUE)
 
@@ -57,7 +57,8 @@ The data is imported, then formatted for `MSstatsTMT` using `PDtoMSstatsTMTForma
 
 ```{r data import}
 # Load PSM data data
-PSMs <- import_psm_data(input_dir, list.files(input_dir, full.names = TRUE))
+PSMs_phos <- import_psm_data(paste0(input_dir, grep("Phospho", list.files(input_dir), value = TRUE)))
+PSMs_proteins <- import_psm_data(paste0(input_dir, grep("Phospho", list.files(input_dir), value = TRUE, invert = TRUE)))
 
 # Load annotations file
 annotations <- full_join(
@@ -71,34 +72,34 @@ row.names(contrast_matrix) <- contrast_matrix[,1]
 contrast_matrix <- contrast_matrix[,-1]
 
 # Format for `MSstatsTMT` input
-MSstatsTMT_input <- MSstatsTMT::PDtoMSstatsTMTFormat(
-  input = PSMs,
-  annotation = annotations,
-  which.proteinid = "Protein Accessions", # Steph: Master Protein Accessions
-  useNumProteinsColumn = TRUE,
-  useUniquePeptide = TRUE,
-  rmPSM_withfewMea_withinRun = TRUE,
-  rmProtein_with1Feature = FALSE,
-  summaryforMultipleRows = sum,
-  use_log_file = TRUE,
-  append = FALSE,
-  verbose = TRUE,
-  log_file_path = paste0(
-    output_dir,
-    "/logs/PDtoMSstatsTMTFormat_log_",
-    format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
-    ".txt"
-  )
-)
+# MSstatsTMT_input <- MSstatsTMT::PDtoMSstatsTMTFormat(
+#   input = PSMs,
+#   annotation = annotations,
+#   which.proteinid = "Protein Accessions", # Steph: Master Protein Accessions
+#   useNumProteinsColumn = TRUE,
+#   useUniquePeptide = TRUE,
+#   rmPSM_withfewMea_withinRun = TRUE,
+#   rmProtein_with1Feature = FALSE,
+#   summaryforMultipleRows = sum,
+#   use_log_file = TRUE,
+#   append = FALSE,
+#   verbose = TRUE,
+#   log_file_path = paste0(
+#     output_dir,
+#     "/logs/PDtoMSstatsTMTFormat_log_",
+#     format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
+#     ".txt"
+#   )
+# )
 
 # Briefly check input
-head(MSstatsTMT_input)
-
-# Count the number of proteins
-paste("There are", (MSstatsTMT_input$ProteinName %>% unique() %>% length()), "proteins in this dataset")
-
-# Save the prepared data
-save(MSstatsTMT_input, file = paste0(output_dir, "TMT_preprocessed.rda"))
+# head(MSstatsTMT_input)
+# 
+# # Count the number of proteins
+# paste("There are", (MSstatsTMT_input$ProteinName %>% unique() %>% length()), "proteins in this dataset")
+# 
+# # Save the prepared data
+# save(MSstatsTMT_input, file = paste0(output_dir, "TMT_preprocessed.rda"))
 ```
 
 # Data Processing
